tests/NormalTests/paczka1/fuzzy1/57687368.err
Error in line 4: VQmb A425 54,8
Error in line 11: vZvrTJ0Mv A23 57,3
Error in line 15: VQmb A23 95,3
Error in line 26: qOJZhWgdUWC A576 30,0
Error in line 30: J3i8yXWB A23 37,5
Error in line 24: bcmlp16r2m A23 53,3
